# veer

./: AUTHORS  README  config.h.in  configure.ac
src/: Makefile.am  Makefile.in  file.c  global.c  move.c  prompt.c  proto.h  text.c  utils.c  veer.c  veer.h  winio.c
